# loanagent

./: .dockerignore  .env.example  .gitignore  README.md
agent-releases/: .gitignore
android/: build.gradle.kts  gradle.properties  settings.gradle.kts
control-plane/: README.md  pyproject.toml  requirements.server.txt
control-plane/src/loanagent/: __init__.py  accounts.py  agent_release.py  auth.py  content.py  content_routes.py  db.py  device_upgrades.py  devices.py  engagement.py  engagement_routes.py  enrollment.py  geo_ip.py  inbox.py  inbox_routes.py  main.py  media.py  mqtt_bus.py  notes.py  notes_routes.py  platforms.py  provisioning.py  roles.py  schedules.py  secure_files.py  sensitivity.py  task_routes.py  tasks.py  update_manifest.py
control-plane/src/loanagent/web/: __init__.py  routes.py
control-plane/src/loanagent/web/templates/: accounts.html  base.html  comments.html  content.html  dashboard.html  devices.html  inbox.html  inbox_thread.html  login.html  publish.html  tasks.html
control-plane/tests/: test_agent_release.py  test_android_manifests.py  test_device_upgrades.py  test_devices_accounts.py  test_enrollment.py  test_geo_ip.py  test_health.py  test_m2a_content.py  test_m2b_engagement.py  test_m2c_inbox.py  test_manual_engagement.py  test_mqtt_contract.py  test_ops_social.py  test_ops_web.py  test_platform_field.py  test_provisioning.py  test_roles.py  test_schemas.py  test_task_hardening.py  test_task_migration_v21.py  test_tasks_mqtt.py  test_update_manifest.py  test_update_manifest_api.py
infra/: compose.adb-lan.yaml  compose.yaml  (+1 more)
(+235 files in other folders)
